k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-demo-app
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: djangodemoapp
        image: devsudjangoapp.azurecr.io/djangodemoapp:latest  # Replace with your Docker image name and tag
        volumeMounts:
          - name: volume
            mountPath: /home/docker/sqlite
            readOnly: false
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: django-pvc
