k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc
spec:
  type: LoadBalancer
  selector:
    app: django
  ports:
    - port: 80
      targetPort: 8000
