k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: azure-52-226-133-244.eastus.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: django-app-svc
                port:
                  number: 80
            path: /
